--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=Nu0shreby
 spring.jpa.generate-ddl=true
 
-spring.mustache.expose-request-attributes=true
+spring.freemarker.expose-request-attributes=true
